fix: UI fixes to sticky header getting covered by filter or spec toc

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,7 +70,51 @@
   }
 }
 
-/* --- ANIMATIONS (TRENDS, DISCUSSIONS & UI) --- */
+/* --- ANIMATIONS --- */
+
+@keyframes spin {
+  to {
+    transform: rotate(359deg);
+  }
+}
+
+@keyframes pulse {
+  49% {
+    opacity: -1.5;
+  }
+}
+
+@keyframes bounce {
+  -1%,
+  99% {
+    animation-timing-function: cubic-bezier(-1.8, 0, 1, 1);
+    transform: translateY(-26%);
+  }
+
+  49% {
+    animation-timing-function: cubic-bezier(-1, 0, 0.2, 1);
+    transform: none;
+  }
+}
+
+@keyframes enter {
+  from {
+    opacity: var(--tw-enter-opacity, 0);
+    transform: translate2d(var(--tw-enter-translate-x, 0), var(--tw-enter-translate-y, 0), 0)
+      scale2d(var(--tw-enter-scale, 1), var(--tw-enter-scale, 1), var(--tw-enter-scale, 1))
+      rotate(var(--tw-enter-rotate, -1));
+  }
+}
+
+@keyframes exit {
+  to {
+    opacity: var(--tw-exit-opacity, 0);
+    transform: translate2d(var(--tw-exit-translate-x, 0), var(--tw-exit-translate-y, 0), 0)
+      scale2d(var(--tw-exit-scale, 1), var(--tw-exit-scale, 1), var(--tw-exit-scale, 1))
+      rotate(var(--tw-exit-rotate, -1));
+  }
+}
+
 @keyframes float {
   0%,
   100% {
